Fix colors in deferred responses

--- a/irssi/README.mkd
+++ b/irssi/README.mkd
@@ -127,7 +127,7 @@ Future improvements
  - Fix test threading so that connection keep-alive will be used
  - OOO Modular structure: commands, tcp handling, http handling, websocket handling, rpc handling
  - Correct JSON-RPC response codes
- - Less dependencies (replace JSON::RPC::Common)
+ - Less dependencies (remove JSON::RPC::Common)
  - GZIP compression (IO::Compress::Gzip)
  - SSL support (HTTP::Daemon::SSL)
 
